--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Age</h5>
                             <!-- Departure -->
-                            <input type="text" class="form-control" id="age" name="age" placeholder="Enter the age">
+                            <input type="number" class="form-control" id="age" name="age" placeholder="Enter the age"
+                            required oninvalid="alert('Please enter valid age');">
                         </div>
                     </div>
                 </div>
@@ -85,7 +86,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Resting BP mm/Hg</h5>
                             <!-- Resting BP -->
-                            <input type="text" class="form-control" id="bp" name="bp" placeholder="Enter the BP level">
+                            <input type="number" class="form-control" id="bp" name="bp"
+                                   placeholder="Enter the Blood Pressure level"
+                                   required oninvalid="alert('Please enter valid blood pressure level');">
                         </div>
                     </div>
                 </div>
@@ -100,7 +103,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Cholesterol(mm/dl)</h5>
                             <!-- Cholesterol level -->
-                            <input type="text" class="form-control" id="cholesterol" name="cholesterol" placeholder="Enter the cholesterol level">
+                            <input type="number" class="form-control" id="cholesterol" name="cholesterol"
+                                   placeholder="Enter the cholesterol level" required
+                                   oninvalid="alert('Please enter valid cholesterol level');">
                         </div>
                     </div>
                 </div>
@@ -109,7 +114,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Fasting blood sugar(mg/dl)</h5>
                             <!-- Blood sugar level -->
-                            <input type="text" class="form-control" id="sugar" name="sugar" placeholder="Enter the fasting blood sugar level">
+                            <input type="number" class="form-control" id="sugar" name="sugar"
+                                   placeholder="Enter the fasting blood sugar level"
+                                   required oninvalid="alert('Please enter valid blood sugar level');">
                         </div>
                     </div>
                 </div>
@@ -136,21 +143,22 @@
                         <div class="card-body">
                             <h5 class="card-title">Maximum Heart rate achieved</h5>
                             <!-- Heart rate -->
-                            <input type="text" class="form-control" id="heartrate" name="heartrate" placeholder="Enter the maximum heart rate achieved">
+                            <input type="number" class="form-control" id="heartrate" name="heartrate"
+                                   placeholder="Enter the maximum heart rate achieved(from 60 and 202)" required
+                                   oninvalid="alert('Please enter valid heart rate');">
                         </div>
                     </div>
                 </div>
             </div>
-
             <br>
             <br>
-
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
                             <!-- Exercise induced Angina -->
-                            <h5 class="card-title">Is pain due to more exercise or more stress?</h5>
+                            <h5 class="card-title">If there is pain, is it due to more exercise or more stress?
+                            if no pain, select NO</h5>
                             <select name="pain" id="pain" required="required">
                                 <option value="yes">Yes</option>
                                 <option value="no">No</option>
@@ -158,21 +166,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Oldpeak</h5>
-                            <!-- ST -->
-                            <input type="text" class="form-control" id="peak" name="peak">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <br>
-            <br>
-
-            <div class="row">
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
@@ -186,31 +179,15 @@
                         </div>
                     </div>
                 </div>
-                <!-- Submit -->
-                <input type="submit" value="Submit" class="btn btn-secondary">
-                <h3>{{ prediction_text }}</h3>
             </div>
-
+            <br>
+            <br>
+                <!-- Submit -->
+                <input type="submit" value="Submit" class="btn btn-secondary" style="text-align:center;">
+                <h3 style="text-align:center;">{{ prediction_text }}</h3>
         </form>
         <br>
-        <center>©Made with ❤️ by Dheeraj RP</center>
-
+        <h5 style="text-align:center;">©Made with ❤️ by Dheeraj</h5>
     </div>
-
-
-
-
-    <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-
 </body>
-
 </html>
