--- a/templates/home.html
+++ b/templates/home.html
@@ -141,7 +141,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Maximum Heart rate achieved</h5>
+                            <h5 class="card-title">Maximum Heart rate achieved(beats/minute)</h5>
                             <!-- Heart rate -->
                             <input type="number" class="form-control" id="heartrate" name="heartrate"
                                    placeholder="Enter the maximum heart rate achieved(from 60 and 202)" required
